@@ -16,16 +16,26 @@
 
 package java.lang;
 
+import android.compat.annotation.UnsupportedAppUsage;
 import android.system.Os;
 import android.system.OsConstants;
-import dalvik.system.VMRuntime;
+
+import java.lang.invoke.MethodHandles;
+import java.lang.invoke.VarHandle;
+import java.lang.ref.Cleaner;
 import java.lang.ref.FinalizerReference;
 import java.lang.ref.Reference;
 import java.lang.ref.ReferenceQueue;
-import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeoutException;
+import java.util.concurrent.atomic.AtomicInteger;
 import libcore.util.EmptyArray;
+import libcore.util.NativeAllocationRegistry;
+
+import dalvik.system.VMRuntime;
+import dalvik.system.VMDebug;
+
+import jdk.internal.ref.CleanerImpl;
 
 /**
  * Calls Object.finalize() on objects in the finalizer reference queue. The VM
@@ -36,28 +46,48 @@ import libcore.util.EmptyArray;
  */
 public final class Daemons {
     private static final int NANOS_PER_MILLI = 1000 * 1000;
-    private static final int NANOS_PER_SECOND = NANOS_PER_MILLI * 1000;
-    private static final long MAX_FINALIZE_NANOS = 10L * NANOS_PER_SECOND;
 
+    // This used to be final. IT IS NOW ONLY WRITTEN. We now update it when we look at the command
+    // line argument, for the benefit of mis-behaved apps that might read it.  SLATED FOR REMOVAL.
+    // There is no reason to use this: Finalizers should not rely on the value. If a finalizer takes
+    // appreciable time, the work should be done elsewhere.  Based on disassembly of Daemons.class,
+    // the value is effectively inlined, so changing the field never did have an effect.
+    // DO NOT USE. FOR ANYTHING. THIS WILL BE REMOVED SHORTLY.
+    @UnsupportedAppUsage
+    private static long MAX_FINALIZE_NANOS = 10L * 1000 * NANOS_PER_MILLI;
+
+    private static final Daemon[] DAEMONS = new Daemon[] {
+            HeapTaskDaemon.INSTANCE,
+            ReferenceQueueDaemon.INSTANCE,
+            FinalizerDaemon.INSTANCE,
+            FinalizerWatchdogDaemon.INSTANCE,
+    };
+    private static CountDownLatch zygoteStartLatch;
+
+    private static boolean postZygoteFork = false;
+
+    @UnsupportedAppUsage
     public static void start() {
-        ReferenceQueueDaemon.INSTANCE.start();
-        FinalizerDaemon.INSTANCE.start();
-        FinalizerWatchdogDaemon.INSTANCE.start();
-        HeapTaskDaemon.INSTANCE.start();
+        zygoteStartLatch = new CountDownLatch(DAEMONS.length);
+        for (Daemon daemon : DAEMONS) {
+            daemon.start();
+        }
     }
 
     public static void startPostZygoteFork() {
-        ReferenceQueueDaemon.INSTANCE.startPostZygoteFork();
-        FinalizerDaemon.INSTANCE.startPostZygoteFork();
-        FinalizerWatchdogDaemon.INSTANCE.startPostZygoteFork();
-        HeapTaskDaemon.INSTANCE.startPostZygoteFork();
+        postZygoteFork = true;
+        start();
     }
 
+    @UnsupportedAppUsage
     public static void stop() {
-        HeapTaskDaemon.INSTANCE.stop();
-        ReferenceQueueDaemon.INSTANCE.stop();
-        FinalizerDaemon.INSTANCE.stop();
-        FinalizerWatchdogDaemon.INSTANCE.stop();
+        for (Daemon daemon : DAEMONS) {
+            daemon.stop();
+        }
+    }
+
+    private static void waitForDaemonStart() throws Exception {
+        zygoteStartLatch.await();
     }
 
     /**
@@ -66,20 +96,16 @@ public final class Daemons {
      * single-threaded process when it forks.
      */
     private static abstract class Daemon implements Runnable {
+        @UnsupportedAppUsage
         private Thread thread;
         private String name;
-        private boolean postZygoteFork;
 
         protected Daemon(String name) {
             this.name = name;
         }
 
+        @UnsupportedAppUsage
         public synchronized void start() {
-            startInternal();
-        }
-
-        public synchronized void startPostZygoteFork() {
-            postZygoteFork = true;
             startInternal();
         }
 
@@ -89,26 +115,46 @@ public final class Daemons {
             }
             thread = new Thread(ThreadGroup.systemThreadGroup, this, name);
             thread.setDaemon(true);
+            thread.setSystemDaemon(true);
             thread.start();
         }
 
-        public void run() {
+        static final int MIN_NICENESS = -8;  // Corresponds to MAX_PRIORITY.
+
+        public final void run() {
             if (postZygoteFork) {
                 // We don't set the priority before the Thread.start() call above because
                 // Thread.start() will call SetNativePriority and overwrite the desired native
                 // priority. We (may) use a native priority that doesn't have a corresponding
-                // java.lang.Thread-level priority (native priorities are more coarse-grained.)
-                VMRuntime.getRuntime().setSystemDaemonThreadPriority();
+                // java.lang.Thread-level priority (Java priorities are more coarse-grained.)
+                Thread.currentThread().setPosixNicenessInternal(
+                    VMRuntime.getRuntime().getSystemDaemonNiceness());
             }
-            runInternal();
+            zygoteStartLatch.countDown();
+            try {
+                runInternal();
+                // This thread is about to exit, and we may have to wait for it to do so.
+                // Terminate the underlying system thread as quickly as possible.
+                // Mirroring the above, we only touch niceness. not Java priority.
+                Thread.currentThread().setPosixNicenessInternal(MIN_NICENESS);
+            } catch (Throwable ex) {
+                // Usually caught in runInternal. May not o.w. get reported, e.g. in zygote.
+                // Risk logging redundantly, rather than losing it.
+                System.logE("Uncaught exception in system thread " + name, ex);
+                throw ex;
+            }
         }
 
+        /*
+         * Do the actual work. Returns normally when asked to stop.
+         */
         public abstract void runInternal();
 
         /**
          * Returns true while the current thread should continue to run; false
          * when it should return.
          */
+        @UnsupportedAppUsage
         protected synchronized boolean isRunning() {
             return thread != null;
         }
@@ -128,7 +174,11 @@ public final class Daemons {
          * Waits for the runtime thread to stop. This interrupts the thread
          * currently running the runnable and then waits for it to exit.
          */
+        @UnsupportedAppUsage
         public void stop() {
+            // This can be called on shutdown with the GC already disabled.
+            // Allocation either here or while handling the request in the
+            // daemon thread should be minimized.
             Thread threadToStop;
             synchronized (this) {
                 threadToStop = thread;
@@ -158,44 +208,107 @@ public final class Daemons {
         }
     }
 
+    // Allocate these strings on start-up.
+    // Don't declare them private, to minimize chances that the compiler can defer allocation.
+    /**
+     * @hide
+     */
+    public static final String FD_OOM_MESSAGE = "Ignoring unexpected OOME in FinalizerDaemon";
+    /**
+     * @hide
+     */
+    public static final String RQD_OOM_MESSAGE = "Ignoring unexpected OOME in ReferenceQueueDaemon";
+
     /**
      * This heap management thread moves elements from the garbage collector's
      * pending list to the managed reference queue.
      */
     private static class ReferenceQueueDaemon extends Daemon {
+        @UnsupportedAppUsage
         private static final ReferenceQueueDaemon INSTANCE = new ReferenceQueueDaemon();
+
+        // Monitored by FinalizerWatchdogDaemon to make sure we're still working.
+        private final AtomicInteger progressCounter = new AtomicInteger(0);
 
         ReferenceQueueDaemon() {
             super("ReferenceQueueDaemon");
         }
 
         @Override public void runInternal() {
+            FinalizerWatchdogDaemon.INSTANCE.monitoringNeeded(FinalizerWatchdogDaemon.RQ_DAEMON);
+
+            // Call once early to reduce later allocation, and hence chance of OOMEs.
+            FinalizerWatchdogDaemon.INSTANCE.resetTimeouts();
+
+            long lastGcCount = VMRuntime.getFullGcCount();
+
             while (isRunning()) {
-                Reference<?> list;
+                Reference<?> list = null;
+                boolean runPostCleanupCallbacks = false;
                 try {
                     synchronized (ReferenceQueue.class) {
-                        while (ReferenceQueue.unenqueued == null) {
-                            ReferenceQueue.class.wait();
+                        if (ReferenceQueue.unenqueued == null) {
+                            long gcCount = VMRuntime.getFullGcCount();
+                            if (gcCount > lastGcCount) {
+                                lastGcCount = gcCount;
+                                runPostCleanupCallbacks = true;
+                            } else {
+                                FinalizerWatchdogDaemon.INSTANCE.monitoringNotNeeded(
+                                    FinalizerWatchdogDaemon.RQ_DAEMON);
+                                // Increment after above call. If watchdog saw it active,
+                                // it should see the counter update.
+                                progressCounter.incrementAndGet();
+                                do {
+                                   ReferenceQueue.class.wait();
+                                } while (ReferenceQueue.unenqueued == null);
+                                progressCounter.incrementAndGet();
+                                FinalizerWatchdogDaemon.INSTANCE.monitoringNeeded(
+                                    FinalizerWatchdogDaemon.RQ_DAEMON);
+                            }
                         }
-                        list = ReferenceQueue.unenqueued;
-                        ReferenceQueue.unenqueued = null;
+                        if (!runPostCleanupCallbacks) {
+                            list = ReferenceQueue.unenqueued;
+                            ReferenceQueue.unenqueued = null;
+                        }
+                    }
+                    if (runPostCleanupCallbacks) {
+                        VMRuntime.onPostCleanup();
+                    }
+                    if (list != null) {
+                        ReferenceQueue.enqueuePending(list, progressCounter);
+                        FinalizerWatchdogDaemon.INSTANCE.resetTimeouts();
                     }
                 } catch (InterruptedException e) {
-                    continue;
-                } catch (OutOfMemoryError e) {
-                    continue;
+                    // Happens when we are asked to stop.
+                } catch (OutOfMemoryError ignored) {
+                    // Very unlikely. Cleaner.clean OOMEs are caught elsewhere, and nothing else
+                    // should allocate regularly. Could result in enqueuePending dropping
+                    // references. Does occur in tests that run out of memory.
+                    System.logW(RQD_OOM_MESSAGE);
                 }
-                ReferenceQueue.enqueuePending(list);
             }
+        }
+
+        Object currentlyProcessing() {
+          return ReferenceQueue.getCurrentTarget();
         }
     }
 
     private static class FinalizerDaemon extends Daemon {
+        @UnsupportedAppUsage
         private static final FinalizerDaemon INSTANCE = new FinalizerDaemon();
         private final ReferenceQueue<Object> queue = FinalizerReference.queue;
         private final AtomicInteger progressCounter = new AtomicInteger(0);
         // Object (not reference!) being finalized. Accesses may race!
+        @UnsupportedAppUsage
         private Object finalizingObject = null;
+
+        // Track if we are currently logging an exception. We don't want to time out
+        // in the middle.
+        public static int NONE = 0;
+        public static int LOGGING = 1;
+        public static int TIMED_OUT = 2;
+        public volatile int exceptionLoggingState = NONE;
 
         FinalizerDaemon() {
             super("FinalizerDaemon");
@@ -213,31 +326,57 @@ public final class Daemons {
             // potentially extended period.  This prevents the device from waking up regularly
             // during idle times.
 
-            // Local copy of progressCounter; saves a fence per increment on ARM and MIPS.
+            // Local copy of progressCounter; saves a fence per increment on ARM.
             int localProgressCounter = progressCounter.get();
 
+            FinalizerWatchdogDaemon.INSTANCE.monitoringNeeded(
+                    FinalizerWatchdogDaemon.FINALIZER_DAEMON);
             while (isRunning()) {
                 try {
                     // Use non-blocking poll to avoid FinalizerWatchdogDaemon communication
                     // when busy.
-                    FinalizerReference<?> finalizingReference = (FinalizerReference<?>)queue.poll();
-                    if (finalizingReference != null) {
-                        finalizingObject = finalizingReference.get();
+                    Object nextReference = queue.poll();
+                    if (nextReference != null) {
                         progressCounter.lazySet(++localProgressCounter);
+                        processReference(nextReference);
                     } else {
                         finalizingObject = null;
-                        progressCounter.lazySet(++localProgressCounter);
                         // Slow path; block.
-                        FinalizerWatchdogDaemon.INSTANCE.goToSleep();
-                        finalizingReference = (FinalizerReference<?>)queue.remove();
-                        finalizingObject = finalizingReference.get();
+                        FinalizerWatchdogDaemon.INSTANCE.monitoringNotNeeded(
+                                FinalizerWatchdogDaemon.FINALIZER_DAEMON);
+                        // Increment after above call. If watchdog saw it active, it should see
+                        // the counter update.
                         progressCounter.set(++localProgressCounter);
-                        FinalizerWatchdogDaemon.INSTANCE.wakeUp();
+                        nextReference = queue.remove();
+                        progressCounter.set(++localProgressCounter);
+                        FinalizerWatchdogDaemon.INSTANCE.monitoringNeeded(
+                                FinalizerWatchdogDaemon.FINALIZER_DAEMON);
+                        processReference(nextReference);
                     }
-                    doFinalize(finalizingReference);
-                } catch (InterruptedException ignored) {
+                } catch (InterruptedException e) {
+                    // Happens when we are asked to stop.
                 } catch (OutOfMemoryError ignored) {
+                    // An  OOME here is unlikely to be actionable. Bravely/foolishly continue.
+                    System.logW(FD_OOM_MESSAGE);
                 }
+            }
+        }
+
+        private void processReference(Object ref) {
+            if (ref instanceof FinalizerReference finalizingReference) {
+                finalizingObject = finalizingReference.get();
+                try {
+                    doFinalize(finalizingReference);
+                } finally {
+                    // Make really sure we delay any PhantomReference enqueueing until we are
+                    // really done. Possibly redundant, but the rules are complex.
+                    Reference.reachabilityFence(finalizingObject);
+                }
+            } else if (ref instanceof Cleaner.Cleanable cleanableReference) {
+                finalizingObject = cleanableReference;
+                doClean(cleanableReference);
+            } else {
+                throw new AssertionError("Unknown class was placed into queue: " + ref);
             }
         }
 
@@ -250,26 +389,73 @@ public final class Daemons {
                 object.finalize();
             } catch (Throwable ex) {
                 // The RI silently swallows these, but Android has always logged.
+                exceptionLoggingState = LOGGING;
                 System.logE("Uncaught exception thrown by finalizer", ex);
+                if (exceptionLoggingState == TIMED_OUT) {
+                  // We would have timed out. Attempt to crash the process here to leave a trace.
+                  throw new AssertionError("Timed out logging finalizer exception", ex);
+                }
             } finally {
                 // Done finalizing, stop holding the object as live.
+                finalizingObject = null;
+                exceptionLoggingState = NONE;
+            }
+        }
+
+        private void doClean(Cleaner.Cleanable cleanable) {
+            try {
+                cleanable.clean();
+                // We only get here for SystemCleaner, and are thus not constrained to ignore
+                // exceptions/errors.
+            } finally {
                 finalizingObject = null;
             }
         }
     }
 
     /**
-     * The watchdog exits the VM if the finalizer ever gets stuck. We consider
-     * the finalizer to be stuck if it spends more than MAX_FINALIZATION_MILLIS
-     * on one instance.
+     * The watchdog exits the VM if either the FinalizerDaemon, or the ReferenceQueueDaemon
+     * gets stuck. We consider the finalizer to be stuck if it spends more than
+     * MAX_FINALIZATION_MILLIS on one instance. We consider ReferenceQueueDaemon to be
+     * potentially stuck if it spends more than MAX_FINALIZATION_MILLIS processing a single
+     * Cleaner or transferring objects into a single queue, but only report if this happens
+     * a few times in a row, to compensate for the fact that multiple Cleaners may be involved.
      */
     private static class FinalizerWatchdogDaemon extends Daemon {
-        private static final FinalizerWatchdogDaemon INSTANCE = new FinalizerWatchdogDaemon();
+        // Single bit values to identify daemon to be watched.
+        static final int FINALIZER_DAEMON = 1;
+        static final int RQ_DAEMON = 2;
 
-        private boolean needToWork = true;  // Only accessed in synchronized methods.
+        @UnsupportedAppUsage
+        private static final FinalizerWatchdogDaemon INSTANCE = new FinalizerWatchdogDaemon();
+        private static final VarHandle VH_ACTION;
+        static {
+            try {
+                VH_ACTION = MethodHandles
+                        .privateLookupIn(
+                                CleanerImpl.PhantomCleanableRef.class, MethodHandles.lookup())
+                        .findVarHandle(
+                                CleanerImpl.PhantomCleanableRef.class, "action", Runnable.class);
+            } catch (NoSuchFieldException | IllegalAccessException e) {
+                throw new AssertionError("PhantomCleanableRef should have action field", e);
+            }
+        }
+
+        private int activeWatchees;  // Only synchronized accesses.
+
+        private long finalizerTimeoutNs = 0;  // Lazily initialized.
+
+        // We tolerate this many timeouts during an enqueuePending call.
+        // This number is > 1, since we may only report enqueuePending progress rarely.
+        private static final int TOLERATED_REFERENCE_QUEUE_TIMEOUTS = 5;
+        private static final AtomicInteger observedReferenceQueueTimeouts = new AtomicInteger(0);
 
         FinalizerWatchdogDaemon() {
             super("FinalizerWatchdogDaemon");
+        }
+
+        void resetTimeouts() {
+            observedReferenceQueueTimeouts.lazySet(0);
         }
 
         @Override public void runInternal() {
@@ -278,9 +464,9 @@ public final class Daemons {
                     // We have been interrupted, need to see if this daemon has been stopped.
                     continue;
                 }
-                final Object finalizing = waitForFinalization();
-                if (finalizing != null && !VMRuntime.getRuntime().isDebuggerActive()) {
-                    finalizerTimedOut(finalizing);
+                final TimeoutException exception = waitForProgress();
+                if (exception != null && !VMDebug.isDebuggerConnected()) {
+                    timedOut(exception);
                     break;
                 }
             }
@@ -292,7 +478,7 @@ public final class Daemons {
          * See also http://code.google.com/p/android/issues/detail?id=22778.
          */
         private synchronized boolean sleepUntilNeeded() {
-            while (!needToWork) {
+            while (activeWatchees == 0) {
                 try {
                     wait();
                 } catch (InterruptedException e) {
@@ -309,37 +495,45 @@ public final class Daemons {
          * Notify daemon that it's OK to sleep until notified that something is ready to be
          * finalized.
          */
-        private synchronized void goToSleep() {
-            needToWork = false;
+        private synchronized void monitoringNotNeeded(int whichDaemon) {
+            activeWatchees &= ~whichDaemon;
         }
 
         /**
          * Notify daemon that there is something ready to be finalized.
          */
-        private synchronized void wakeUp() {
-            needToWork = true;
-            notify();
+        private synchronized void monitoringNeeded(int whichDaemon) {
+            int oldWatchees = activeWatchees;
+            activeWatchees |= whichDaemon;
+
+            if (oldWatchees == 0) {
+                notify();
+            }
         }
 
-        private synchronized boolean getNeedToWork() {
-            return needToWork;
+        private synchronized boolean isActive(int whichDaemon) {
+            return (activeWatchees & whichDaemon) != 0;
         }
 
         /**
-         * Sleep for the given number of nanoseconds.
+         * Sleep for the given number of nanoseconds, or slightly longer.
          * @return false if we were interrupted.
          */
-        private boolean sleepFor(long durationNanos) {
+        private boolean sleepForNanos(long durationNanos) {
+            // It's important to base this on nanoTime(), not currentTimeMillis(), since
+            // the former stops counting when the processor isn't running.
             long startNanos = System.nanoTime();
             while (true) {
                 long elapsedNanos = System.nanoTime() - startNanos;
                 long sleepNanos = durationNanos - elapsedNanos;
-                long sleepMills = sleepNanos / NANOS_PER_MILLI;
-                if (sleepMills <= 0) {
+                if (sleepNanos <= 0) {
                     return true;
                 }
+                // Ensure the nano time is always rounded up to the next whole millisecond,
+                // ensuring the delay is >= the requested delay.
+                long sleepMillis = (sleepNanos + NANOS_PER_MILLI - 1) / NANOS_PER_MILLI;
                 try {
-                    Thread.sleep(sleepMills);
+                    Thread.sleep(sleepMillis);
                 } catch (InterruptedException e) {
                     if (!isRunning()) {
                         return false;
@@ -352,55 +546,151 @@ public final class Daemons {
             }
         }
 
+        /**
+         * A toString() that cannot possibly be stopped by a hung finalizer.
+         * Mirrors Object.toString(), except that we use the system hashcode.
+         * Thus no user monitors can be acquired.
+         */
+        static private String safeToString(Object obj) {
+            if (NativeAllocationRegistry.isCleanerThunk(obj)) {
+                // Known to not acquire user monitors, and has toString() method tailored for this.
+                return obj.toString();
+            }
+            return obj.getClass().getName() + '@'
+                    + Integer.toHexString(System.identityHashCode(obj));
+        }
 
         /**
-         * Return an object that took too long to finalize or return null.
-         * Wait MAX_FINALIZE_NANOS.  If the FinalizerDaemon took essentially the whole time
-         * processing a single reference, return that reference.  Otherwise return null.
+         * Return null (normal case) or an exception describing what timed out.
+         * Wait VMRuntime.getFinalizerTimeoutMs.  If the FinalizerDaemon took essentially the
+         * whole time processing a single reference, or the ReferenceQueueDaemon failed to make
+         * visible progress during that time, return an exception.  Only called from a single
+         * thread.
          */
-        private Object waitForFinalization() {
-            long startCount = FinalizerDaemon.INSTANCE.progressCounter.get();
-            // Avoid remembering object being finalized, so as not to keep it alive.
-            if (!sleepFor(MAX_FINALIZE_NANOS)) {
-                // Don't report possibly spurious timeout if we are interrupted.
-                return null;
+        private TimeoutException waitForProgress() {
+            if (finalizerTimeoutNs == 0) {
+                finalizerTimeoutNs =
+                        NANOS_PER_MILLI * VMRuntime.getRuntime().getFinalizerTimeoutMs();
+                // Temporary app backward compatibility. Remove eventually.
+                MAX_FINALIZE_NANOS = finalizerTimeoutNs;
             }
-            if (getNeedToWork() && FinalizerDaemon.INSTANCE.progressCounter.get() == startCount) {
-                // We assume that only remove() and doFinalize() may take time comparable to
-                // MAX_FINALIZE_NANOS.
-                // We observed neither the effect of the gotoSleep() nor the increment preceding a
-                // later wakeUp. Any remove() call by the FinalizerDaemon during our sleep
-                // interval must have been followed by a wakeUp call before we checked needToWork.
-                // But then we would have seen the counter increment.  Thus there cannot have
-                // been such a remove() call.
-                // The FinalizerDaemon must not have progressed (from either the beginning or the
-                // last progressCounter increment) to either the next increment or gotoSleep()
-                // call.  Thus we must have taken essentially the whole MAX_FINALIZE_NANOS in a
-                // single doFinalize() call.  Thus it's OK to time out.  finalizingObject was set
-                // just before the counter increment, which preceded the doFinalize call.  Thus we
-                // are guaranteed to get the correct finalizing value below, unless doFinalize()
-                // just finished as we were timing out, in which case we may get null or a later
-                // one.  In this last case, we are very likely to discard it below.
+            // Read the counter before we read the "active" state the first time, and after
+            // we read it the last time, to guarantee that if the state was ever inactive,
+            // we'll see a changed counter.
+            int finalizerStartCount = FinalizerDaemon.INSTANCE.progressCounter.get();
+            boolean monitorFinalizer = isActive(FINALIZER_DAEMON);
+            int refQueueStartCount = ReferenceQueueDaemon.INSTANCE.progressCounter.get();
+            boolean monitorRefQueue = isActive(RQ_DAEMON);
+            // Avoid remembering object being finalized, so as not to keep it alive.
+            final long startMillis = System.currentTimeMillis();
+            final long startNanos = System.nanoTime();
+
+            // Rather than just sleeping for finalizerTimeoutNs and checking whether we made
+            // progress, we sleep repeatedly. This means that if our process makes no progress,
+            // e.g. because it is frozen, the watchdog also won't, making it less likely we will
+            // spuriously time out. It does mean that in the normal case, we will go to sleep
+            // and wake up twice per timeout period, rather than once.
+            final int NUM_WAKEUPS = 5;
+            for (int i = 1; i <= NUM_WAKEUPS; ++i) {
+                if (!sleepForNanos(finalizerTimeoutNs / NUM_WAKEUPS)) {
+                    // Don't report possibly spurious timeout if we are interrupted.
+                    return null;
+                }
+                if (monitorFinalizer && isActive(FINALIZER_DAEMON)
+                    && FinalizerDaemon.INSTANCE.progressCounter.get() == finalizerStartCount) {
+                    // Still working on same finalizer or Java 9 Cleaner.
+                    continue;
+                }
+                if (monitorRefQueue && isActive(RQ_DAEMON)
+                    && ReferenceQueueDaemon.INSTANCE.progressCounter.get() == refQueueStartCount) {
+                    // Still working on same ReferenceQueue or sun.misc.Cleaner.
+                    continue;
+                }
+                // Everything that could make progress, already did. Just sleep for the rest of the
+                // timeout interval.
+                if (i < NUM_WAKEUPS) {
+                    sleepForNanos((finalizerTimeoutNs  / NUM_WAKEUPS) * (NUM_WAKEUPS - i));
+                    return null;
+                }
+            }
+            // Either a state change to inactive, or a task completion would have caused us to see a
+            // counter change. Thus at least one of the daemons appears stuck.
+            if (monitorFinalizer && isActive(FINALIZER_DAEMON)
+                && FinalizerDaemon.INSTANCE.progressCounter.get() == finalizerStartCount) {
+                if (FinalizerDaemon.INSTANCE.exceptionLoggingState == FinalizerDaemon.LOGGING) {
+                    // Try to let it finish and crash. We will time out if we get here again.
+                    FinalizerDaemon.INSTANCE.exceptionLoggingState = FinalizerDaemon.TIMED_OUT;
+                }
+                // The finalizingObject field was set just before the counter increment, which
+                // preceded the doFinalize() or doClean() call.  Thus we are guaranteed to get the
+                // correct finalizing value below, unless doFinalize() just finished as we were
+                // timing out, in which case we may get null or a later one.
                 Object finalizing = FinalizerDaemon.INSTANCE.finalizingObject;
-                sleepFor(NANOS_PER_SECOND / 2);
-                // Recheck to make it even less likely we report the wrong finalizing object in
-                // the case which a very slow finalization just finished as we were timing out.
-                if (getNeedToWork()
-                        && FinalizerDaemon.INSTANCE.progressCounter.get() == startCount) {
-                    return finalizing;
+                System.logE("Was finalizing " + finalizingObjectAsString(finalizing)
+                    + ", now finalizing "
+                    + finalizingObjectAsString(FinalizerDaemon.INSTANCE.finalizingObject));
+                // Print both time of day and monotonic time differences:
+                System.logE("Total elapsed millis: "
+                    + (System.currentTimeMillis() - startMillis));
+                System.logE("Total elapsed nanos: " + (System.nanoTime() - startNanos));
+                return finalizerTimeoutException(finalizing);
+            }
+            if (monitorRefQueue && isActive(RQ_DAEMON)
+                && ReferenceQueueDaemon.INSTANCE.progressCounter.get() == refQueueStartCount) {
+                // Report RQD timeouts only if they occur repeatedly.
+                // TODO: Consider changing that, but we have historically been more tolerant here,
+                // since we may not increment the reference counter for every processed queue
+                // element.
+                Object current = ReferenceQueueDaemon.INSTANCE.currentlyProcessing();
+                String currentTarget = current == null ? "unknown" : safeToString(current);
+                System.logE("ReferenceQueueDaemon timed out while targeting " + currentTarget
+                        + ". Total nanos: " + (System.nanoTime() - startNanos));
+                if (observedReferenceQueueTimeouts.incrementAndGet()
+                        > TOLERATED_REFERENCE_QUEUE_TIMEOUTS) {
+                    return refQueueTimeoutException(currentTarget);
                 }
             }
             return null;
         }
 
-        private static void finalizerTimedOut(Object object) {
-            // The current object has exceeded the finalization deadline; abort!
-            String message = object.getClass().getName() + ".finalize() timed out after "
-                    + (MAX_FINALIZE_NANOS / NANOS_PER_SECOND) + " seconds";
-            Exception syntheticException = new TimeoutException(message);
+        private static TimeoutException finalizerTimeoutException(Object object) {
+            if (object == null) {
+                return new TimeoutException("Unknown finalizer timed out");
+            }
+            StringBuilder messageBuilder = new StringBuilder();
+
+            if (object instanceof Cleaner.Cleanable) {
+                messageBuilder.append(VH_ACTION.get(object).getClass().getName());
+            } else {
+                messageBuilder.append(object.getClass().getName()).append(".finalize()");
+            }
+
+            messageBuilder.append(" timed out after ")
+                    .append(VMRuntime.getRuntime().getFinalizerTimeoutMs() / 1000)
+                    .append(" seconds");
+            TimeoutException syntheticException = new TimeoutException(messageBuilder.toString());
             // We use the stack from where finalize() was running to show where it was stuck.
             syntheticException.setStackTrace(FinalizerDaemon.INSTANCE.getStackTrace());
+            return syntheticException;
+        }
 
+        private static String finalizingObjectAsString(Object obj) {
+            if (obj == null) {
+                return "unknown";
+            }
+            if (obj instanceof Cleaner.Cleanable) {
+                return safeToString(VH_ACTION.get(obj));
+            } else {
+                return safeToString(obj);
+            }
+        }
+
+        private static TimeoutException refQueueTimeoutException(String target) {
+            String message = "ReferenceQueueDaemon timed out while targeting " + target;
+            return new TimeoutException(message);
+        }
+
+        private static void timedOut(TimeoutException exception) {
             // Send SIGQUIT to get native stack traces.
             try {
                 Os.kill(Os.getpid(), OsConstants.SIGQUIT);
@@ -417,7 +707,7 @@ public final class Daemons {
             // handler to dispatch to, either via a handler set on itself, via its ThreadGroup
             // object or via the defaultUncaughtExceptionHandler.
             //
-            // As an approximation, we log by hand an exit if there's no pre-exception handler nor
+            // As an approximation, we log by hand and exit if there's no pre-exception handler nor
             // a default uncaught exception handler.
             //
             // Note that this condition will only ever be hit by ART host tests and standalone
@@ -426,19 +716,20 @@ public final class Daemons {
             if (Thread.getUncaughtExceptionPreHandler() == null &&
                     Thread.getDefaultUncaughtExceptionHandler() == null) {
                 // If we have no handler, log and exit.
-                System.logE(message, syntheticException);
+                System.logE(exception.getMessage(), exception);
                 System.exit(2);
             }
 
             // Otherwise call the handler to do crash reporting.
             // We don't just throw because we're not the thread that
             // timed out; we're the thread that detected it.
-            Thread.currentThread().dispatchUncaughtException(syntheticException);
+            Thread.currentThread().dispatchUncaughtException(exception);
         }
     }
 
     // Adds a heap trim task to the heap event processor, not called from java. Left for
     // compatibility purposes due to reflection.
+    @UnsupportedAppUsage
     public static void requestHeapTrim() {
         VMRuntime.getRuntime().requestHeapTrim();
     }
