@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,10 +25,15 @@
 
 package java.lang.invoke;
 
-import dalvik.system.VMRuntime;
+import jdk.internal.vm.annotation.IntrinsicCandidate;
+import java.lang.constant.ClassDesc;
+import java.lang.constant.ConstantDesc;
+import java.lang.constant.ConstantDescs;
+import java.lang.constant.DirectMethodHandleDesc;
+import java.lang.constant.DynamicConstantDesc;
+import java.lang.foreign.MemorySegment;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -40,7 +45,7 @@ import java.util.Objects;
  * non-static fields, array elements, or components of an off-heap data
  * structure.  Access to such variables is supported under various
  * <em>access modes</em>, including plain read/write access, volatile
- * read/write access, and compare-and-swap.
+ * read/write access, and compare-and-set.
  *
  * <p>VarHandles are immutable and have no visible state.  VarHandles cannot be
  * subclassed by the user.
@@ -95,7 +100,7 @@ import java.util.Objects;
  * is {@code String}.  The access mode type for {@code compareAndSet} on this
  * VarHandle instance would be
  * {@code (String[] c1, int c2, String expectedValue, String newValue)boolean}.
- * Such a VarHandle instance may produced by the
+ * Such a VarHandle instance may be produced by the
  * {@link MethodHandles#arrayElementVarHandle(Class) array factory method} and
  * access array elements as follows:
  * <pre> {@code
@@ -199,7 +204,7 @@ import java.util.Objects;
  * and {@code double} on 32-bit platforms.
  *
  * <p>Access modes will override any memory ordering effects specified at
- * the declaration site of a variable.  For example, a VarHandle accessing a
+ * the declaration site of a variable.  For example, a VarHandle accessing
  * a field using the {@code get} access mode will access the field as
  * specified <em>by its access mode</em> even if that field is declared
  * {@code volatile}.  When mixed access is performed extreme care should be
@@ -417,7 +422,7 @@ import java.util.Objects;
  * {@link java.lang.invoke.MethodHandles#varHandleInvoker}.
  *
  * <h1>Interoperation between VarHandles and Java generics</h1>
- * A VarHandle can be obtained for a variable, such as a a field, which is
+ * A VarHandle can be obtained for a variable, such as a field, which is
  * declared with Java generic types.  As with the Core Reflection API, the
  * VarHandle's variable type will be constructed from the erasure of the
  * source-level type.  When a VarHandle access mode method is invoked, the
@@ -431,11 +436,10 @@ import java.util.Objects;
  * @see MethodHandles
  * @see MethodType
  * @since 9
- * @hide
  */
 public abstract class VarHandle {
-    // Android-added: Using sun.misc.Unsafe for fence implementation.
-    private static final sun.misc.Unsafe UNSAFE = sun.misc.Unsafe.getUnsafe();
+    // Android-added: Using jdk.internal.misc.Unsafe for fence implementation.
+    private static final jdk.internal.misc.Unsafe UNSAFE = jdk.internal.misc.Unsafe.getUnsafe();
 
     // BEGIN Android-removed: No VarForm in Android implementation.
     /*
@@ -491,8 +495,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     Object get(Object... args);
 
     /**
@@ -518,8 +521,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     void set(Object... args);
 
 
@@ -551,8 +553,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     Object getVolatile(Object... args);
 
     /**
@@ -582,8 +583,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     void setVolatile(Object... args);
 
 
@@ -613,8 +613,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     Object getOpaque(Object... args);
 
     /**
@@ -641,8 +640,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     void setOpaque(Object... args);
 
 
@@ -679,8 +677,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     Object getAcquire(Object... args);
 
     /**
@@ -711,8 +708,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     void setRelease(Object... args);
 
 
@@ -748,8 +744,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     boolean compareAndSet(Object... args);
 
     /**
@@ -784,8 +779,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     Object compareAndExchange(Object... args);
 
     /**
@@ -820,8 +814,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     Object compareAndExchangeAcquire(Object... args);
 
     /**
@@ -856,8 +849,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     Object compareAndExchangeRelease(Object... args);
 
     // Weak (spurious failures allowed)
@@ -896,8 +888,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     boolean weakCompareAndSetPlain(Object... args);
 
     /**
@@ -934,8 +925,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     boolean weakCompareAndSet(Object... args);
 
     /**
@@ -973,8 +963,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     boolean weakCompareAndSetAcquire(Object... args);
 
     /**
@@ -1012,8 +1001,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     boolean weakCompareAndSetRelease(Object... args);
 
     /**
@@ -1046,8 +1034,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     Object getAndSet(Object... args);
 
     /**
@@ -1080,8 +1067,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     Object getAndSetAcquire(Object... args);
 
     /**
@@ -1114,8 +1100,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     Object getAndSetRelease(Object... args);
 
     // Primitive adders
@@ -1151,8 +1136,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     Object getAndAdd(Object... args);
 
     /**
@@ -1185,8 +1169,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     Object getAndAddAcquire(Object... args);
 
     /**
@@ -1219,8 +1202,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     Object getAndAddRelease(Object... args);
 
 
@@ -1261,8 +1243,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     Object getAndBitwiseOr(Object... args);
 
     /**
@@ -1299,8 +1280,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     Object getAndBitwiseOrAcquire(Object... args);
 
     /**
@@ -1337,8 +1317,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     Object getAndBitwiseOrRelease(Object... args);
 
     /**
@@ -1375,8 +1354,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     Object getAndBitwiseAnd(Object... args);
 
     /**
@@ -1413,8 +1391,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     Object getAndBitwiseAndAcquire(Object... args);
 
     /**
@@ -1451,8 +1428,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     Object getAndBitwiseAndRelease(Object... args);
 
     /**
@@ -1489,8 +1465,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     Object getAndBitwiseXor(Object... args);
 
     /**
@@ -1527,8 +1502,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     Object getAndBitwiseXorAcquire(Object... args);
 
     /**
@@ -1565,8 +1539,7 @@ public abstract class VarHandle {
      */
     public final native
     @MethodHandle.PolymorphicSignature
-    // Android-removed: unsupported annotation.
-    // @HotSpotIntrinsicCandidate
+    @IntrinsicCandidate
     Object getAndBitwiseXorRelease(Object... args);
 
 
@@ -1574,7 +1547,7 @@ public abstract class VarHandle {
     enum AccessType {
         GET,
         SET,
-        COMPARE_AND_SWAP,
+        COMPARE_AND_SET,
         COMPARE_AND_EXCHANGE,
         GET_AND_UPDATE,
         // Android-added: Finer grained access types.
@@ -1596,7 +1569,7 @@ public abstract class VarHandle {
                     i = fillParameters(ps, receiver, intermediate);
                     ps[i] = value;
                     return MethodType.methodType(void.class, ps);
-                case COMPARE_AND_SWAP:
+                case COMPARE_AND_SET:
                     ps = allocateParameters(2, receiver, intermediate);
                     i = fillParameters(ps, receiver, intermediate);
                     ps[i++] = value;
@@ -1695,7 +1668,7 @@ public abstract class VarHandle {
          * method
          * {@link VarHandle#compareAndSet VarHandle.compareAndSet}
          */
-        COMPARE_AND_SET("compareAndSet", AccessType.COMPARE_AND_SWAP),
+        COMPARE_AND_SET("compareAndSet", AccessType.COMPARE_AND_SET),
         /**
          * The access mode whose access is specified by the corresponding
          * method
@@ -1719,25 +1692,25 @@ public abstract class VarHandle {
          * method
          * {@link VarHandle#weakCompareAndSetPlain VarHandle.weakCompareAndSetPlain}
          */
-        WEAK_COMPARE_AND_SET_PLAIN("weakCompareAndSetPlain", AccessType.COMPARE_AND_SWAP),
+        WEAK_COMPARE_AND_SET_PLAIN("weakCompareAndSetPlain", AccessType.COMPARE_AND_SET),
         /**
          * The access mode whose access is specified by the corresponding
          * method
          * {@link VarHandle#weakCompareAndSet VarHandle.weakCompareAndSet}
          */
-        WEAK_COMPARE_AND_SET("weakCompareAndSet", AccessType.COMPARE_AND_SWAP),
+        WEAK_COMPARE_AND_SET("weakCompareAndSet", AccessType.COMPARE_AND_SET),
         /**
          * The access mode whose access is specified by the corresponding
          * method
          * {@link VarHandle#weakCompareAndSetAcquire VarHandle.weakCompareAndSetAcquire}
          */
-        WEAK_COMPARE_AND_SET_ACQUIRE("weakCompareAndSetAcquire", AccessType.COMPARE_AND_SWAP),
+        WEAK_COMPARE_AND_SET_ACQUIRE("weakCompareAndSetAcquire", AccessType.COMPARE_AND_SET),
         /**
          * The access mode whose access is specified by the corresponding
          * method
          * {@link VarHandle#weakCompareAndSetRelease VarHandle.weakCompareAndSetRelease}
          */
-        WEAK_COMPARE_AND_SET_RELEASE("weakCompareAndSetRelease", AccessType.COMPARE_AND_SWAP),
+        WEAK_COMPARE_AND_SET_RELEASE("weakCompareAndSetRelease", AccessType.COMPARE_AND_SET),
         /**
          * The access mode whose access is specified by the corresponding
          * method
@@ -1832,10 +1805,12 @@ public abstract class VarHandle {
 
         static final Map<String, AccessMode> methodNameToAccessMode;
         static {
-            // Initial capacity of # values is sufficient to avoid resizes
-            // for the smallest table size (32)
-            methodNameToAccessMode = new HashMap<>(AccessMode.values().length);
-            for (AccessMode am : AccessMode.values()) {
+            AccessMode[] values = AccessMode.values();
+            // Initial capacity of # values divided by the load factor is sufficient
+            // to avoid resizes for the smallest table size (64)
+            int initialCapacity = (int)(values.length / 0.75f) + 1;
+            methodNameToAccessMode = new HashMap<>(initialCapacity);
+            for (AccessMode am : values) {
                 methodNameToAccessMode.put(am.methodName, am);
             }
         }
@@ -1869,7 +1844,7 @@ public abstract class VarHandle {
          *         value associated with method name (indicating the method
          *         name does not correspond to a {@code VarHandle}
          *         signature-polymorphic method name).
-         * @see #methodName
+         * @see #methodName()
          */
         public static AccessMode valueFromMethodName(String methodName) {
             AccessMode am = methodNameToAccessMode.get(methodName);
@@ -1906,6 +1881,19 @@ public abstract class VarHandle {
     }
     */
     // END Android-removed: AccessDescriptor not used in Android implementation.
+
+    /**
+     * Returns a compact textual description of this {@linkplain VarHandle},
+     * including the type of variable described, and a description of its coordinates.
+     *
+     * @return A compact textual description of this {@linkplain VarHandle}
+     */
+    @Override
+    public final String toString() {
+        return String.format("VarHandle[varType=%s, coord=%s]",
+                varType().getName(),
+                coordinateTypes());
+    }
 
     /**
      * Returns the variable type of variables referenced by this VarHandle.
@@ -2110,12 +2098,7 @@ public abstract class VarHandle {
     private static final long VFORM_OFFSET;
 
     static {
-        try {
-            VFORM_OFFSET = UNSAFE.objectFieldOffset(VarHandle.class.getDeclaredField("vform"));
-        }
-        catch (ReflectiveOperationException e) {
-            throw newInternalError(e);
-        }
+        VFORM_OFFSET = UNSAFE.objectFieldOffset(VarHandle.class, "vform");
 
         // The VarHandleGuards must be initialized to ensure correct
         // compilation of the guard methods
@@ -2250,13 +2233,46 @@ public abstract class VarHandle {
             this.accessModesBitMask = unalignedAccessModesBitMask(varType);
         }
     }
-    // END Android-changed: package private constructors.
+
+    /**
+     * Constructor for VarHandle for MemorySegment
+     *
+     * @param varType the variable type of variables to be referenced
+     * @param coordinateType0 the first coordinate
+     * @param coordinateType1 the second coordinate
+     * @hide
+     */
+    VarHandle(Class<?> varType,
+              Class<?> coordinateType0, Class<?> coordinateType1, boolean isAccessAligned) {
+        if (coordinateType0 != MemorySegment.class) {
+            throw new InternalError(
+                    "Coordinate type must be MemorySegment but it is: " + coordinateType0);
+        }
+        this.varType = Objects.requireNonNull(varType);
+        this.coordinateType0 = Objects.requireNonNull(coordinateType0);
+        this.coordinateType1 = Objects.requireNonNull(coordinateType1);
+
+        if (isAccessAligned) {
+            this.accessModesBitMask = alignedAccessModesBitMask(varType, false);
+        } else {
+            // An unaligned var handle only supports the get and set access modes
+            // regardless of varType
+            this.accessModesBitMask = UNALIGNED_MEMORY_SEGMENT_ACCESS_MODES_BIT_MASK;
+        }
+    }
+    // END Android-added: package private constructors.
 
     // BEGIN Android-added: helper state for VarHandle properties.
+    /*
+     * Shift values belows are ordinals of AccessMode enum values. They are inlined to break
+     * initialization cycle: Enum uses ClassValue, which uses AtomicInteger class, which is
+     * implemented on top of VarHandles.
+     * See VarHandleTest.
+     */
 
     /** BitMask of access modes that do not change the memory referenced by a VarHandle.
      * An example being a read of a variable with volatile ordering effects. */
-    private final static int READ_ACCESS_MODES_BIT_MASK;
+    private final static int READ_ACCESS_MODES_BIT_MASK = 1 << 0 | 1 << 2 | 1 << 4 | 1 << 6;
 
     /** BitMask of access modes that write to the memory referenced by
      * a VarHandle.  This does not include any compare and update
@@ -2264,65 +2280,58 @@ public abstract class VarHandle {
      * example being a write to variable with release ordering
      * effects.
      */
-    private final static int WRITE_ACCESS_MODES_BIT_MASK;
+    private final static int WRITE_ACCESS_MODES_BIT_MASK = 1 << 1 | 1 << 3 | 1 << 5 | 1 << 7;
+
+    /** BitMask of only get and set access modes which are the only
+     * access modes supported for a MemorySegmentVarHandle
+     * if the access is unaligned
+     */
+    private final static int UNALIGNED_MEMORY_SEGMENT_ACCESS_MODES_BIT_MASK = 1 << 0 | 1 << 1;
 
     /** BitMask of access modes that are applicable to types
      * supporting for atomic updates.  This includes access modes that
      * both read and write a variable such as compare-and-set.
      */
-    private final static int ATOMIC_UPDATE_ACCESS_MODES_BIT_MASK;
+    private final static int ATOMIC_UPDATE_ACCESS_MODES_BIT_MASK =
+        1 << 8  |
+        1 << 9  |
+        1 << 10 |
+        1 << 11 |
+        1 << 12 |
+        1 << 13 |
+        1 << 14 |
+        1 << 15 |
+        1 << 16 |
+        1 << 17 |
+        1 << 18;
 
     /** BitMask of access modes that are applicable to types
      * supporting numeric atomic update operations. */
-    private final static int NUMERIC_ATOMIC_UPDATE_ACCESS_MODES_BIT_MASK;
+    private final static int NUMERIC_ATOMIC_UPDATE_ACCESS_MODES_BIT_MASK =
+        1 << 19 |
+        1 << 20 |
+        1 << 21;
 
     /** BitMask of access modes that are applicable to types
      * supporting bitwise atomic update operations. */
-    private final static int BITWISE_ATOMIC_UPDATE_ACCESS_MODES_BIT_MASK;
+    private final static int BITWISE_ATOMIC_UPDATE_ACCESS_MODES_BIT_MASK =
+        1 << 22 |
+        1 << 23 |
+        1 << 24 |
+        1 << 25 |
+        1 << 26 |
+        1 << 27 |
+        1 << 28 |
+        1 << 29 |
+        1 << 30;
 
     /** BitMask of all access modes. */
-    private final static int ALL_MODES_BIT_MASK;
-
-    static {
-        // Check we're not about to overflow the storage of the
-        // bitmasks here and in the accessModesBitMask field.
-        if (AccessMode.values().length > Integer.SIZE) {
-            throw new InternalError("accessModes overflow");
-        }
-
-        // Access modes bit mask declarations and initialization order
-        // follows the presentation order in JEP193.
-        READ_ACCESS_MODES_BIT_MASK = accessTypesToBitMask(EnumSet.of(AccessType.GET));
-
-        WRITE_ACCESS_MODES_BIT_MASK = accessTypesToBitMask(EnumSet.of(AccessType.SET));
-
-        ATOMIC_UPDATE_ACCESS_MODES_BIT_MASK =
-                accessTypesToBitMask(EnumSet.of(AccessType.COMPARE_AND_EXCHANGE,
-                                                AccessType.COMPARE_AND_SWAP,
-                                                AccessType.GET_AND_UPDATE));
-
-        NUMERIC_ATOMIC_UPDATE_ACCESS_MODES_BIT_MASK =
-                accessTypesToBitMask(EnumSet.of(AccessType.GET_AND_UPDATE_NUMERIC));
-
-        BITWISE_ATOMIC_UPDATE_ACCESS_MODES_BIT_MASK =
-                accessTypesToBitMask(EnumSet.of(AccessType.GET_AND_UPDATE_BITWISE));
-
-        ALL_MODES_BIT_MASK = (READ_ACCESS_MODES_BIT_MASK |
-                              WRITE_ACCESS_MODES_BIT_MASK |
-                              ATOMIC_UPDATE_ACCESS_MODES_BIT_MASK |
-                              NUMERIC_ATOMIC_UPDATE_ACCESS_MODES_BIT_MASK |
-                              BITWISE_ATOMIC_UPDATE_ACCESS_MODES_BIT_MASK);
-    }
-
-    static int accessTypesToBitMask(final EnumSet<AccessType> accessTypes) {
-        int m = 0;
-        for (AccessMode accessMode : AccessMode.values()) {
-            if (accessTypes.contains(accessMode.at)) {
-                m |= 1 << accessMode.ordinal();
-            }
-        }
-        return m;
-    }
+    private final static int ALL_MODES_BIT_MASK =
+            READ_ACCESS_MODES_BIT_MASK |
+            WRITE_ACCESS_MODES_BIT_MASK |
+            ATOMIC_UPDATE_ACCESS_MODES_BIT_MASK |
+            NUMERIC_ATOMIC_UPDATE_ACCESS_MODES_BIT_MASK |
+            BITWISE_ATOMIC_UPDATE_ACCESS_MODES_BIT_MASK;
 
     static int alignedAccessModesBitMask(Class<?> varType, boolean isFinal) {
         // For aligned accesses, the supported access modes are described in:
@@ -2382,5 +2391,162 @@ public abstract class VarHandle {
         }
         return bitMask;
     }
-    // END Android-added: helper class for VarHandle properties.
+    // END Android-added: helper state for VarHandle properties.
+
+    // BEGIN Android-added: Add VarHandleDesc from OpenJDK 17. http://b/270028670
+    /**
+     * A <a href="{@docRoot}/java.base/java/lang/constant/package-summary.html#nominal">nominal descriptor</a> for a
+     * {@link VarHandle} constant.
+     *
+     * @since 12
+     * @hide
+     */
+    public static final class VarHandleDesc extends DynamicConstantDesc<VarHandle> {
+
+        /**
+         * Kinds of variable handle descs
+         */
+        private enum Kind {
+            FIELD(ConstantDescs.BSM_VARHANDLE_FIELD),
+            STATIC_FIELD(ConstantDescs.BSM_VARHANDLE_STATIC_FIELD),
+            ARRAY(ConstantDescs.BSM_VARHANDLE_ARRAY);
+
+            final DirectMethodHandleDesc bootstrapMethod;
+
+            Kind(DirectMethodHandleDesc bootstrapMethod) {
+                this.bootstrapMethod = bootstrapMethod;
+            }
+
+            ConstantDesc[] toBSMArgs(ClassDesc declaringClass, ClassDesc varType) {
+                return switch (this) {
+                    case FIELD, STATIC_FIELD -> new ConstantDesc[]{declaringClass, varType};
+                    case ARRAY               -> new ConstantDesc[]{declaringClass};
+                    default -> throw new InternalError("Cannot reach here");
+                };
+            }
+        }
+
+        private final Kind kind;
+        private final ClassDesc declaringClass;
+        private final ClassDesc varType;
+
+        /**
+         * Construct a {@linkplain VarHandleDesc} given a kind, name, and declaring
+         * class.
+         *
+         * @param kind the kind of the var handle
+         * @param name the unqualified name of the field, for field var handles; otherwise ignored
+         * @param declaringClass a {@link ClassDesc} describing the declaring class,
+         *                       for field var handles
+         * @param varType a {@link ClassDesc} describing the type of the variable
+         * @throws NullPointerException if any required argument is null
+         * @jvms 4.2.2 Unqualified Names
+         */
+        private VarHandleDesc(Kind kind, String name, ClassDesc declaringClass, ClassDesc varType) {
+            super(kind.bootstrapMethod, name,
+                    ConstantDescs.CD_VarHandle,
+                    kind.toBSMArgs(declaringClass, varType));
+            this.kind = kind;
+            this.declaringClass = declaringClass;
+            this.varType = varType;
+        }
+
+        /**
+         * Returns a {@linkplain VarHandleDesc} corresponding to a {@link VarHandle}
+         * for an instance field.
+         *
+         * @param name the unqualified name of the field
+         * @param declaringClass a {@link ClassDesc} describing the declaring class,
+         *                       for field var handles
+         * @param fieldType a {@link ClassDesc} describing the type of the field
+         * @return the {@linkplain VarHandleDesc}
+         * @throws NullPointerException if any of the arguments are null
+         * @jvms 4.2.2 Unqualified Names
+         */
+        public static VarHandleDesc ofField(ClassDesc declaringClass, String name, ClassDesc fieldType) {
+            Objects.requireNonNull(declaringClass);
+            Objects.requireNonNull(name);
+            Objects.requireNonNull(fieldType);
+            return new VarHandleDesc(Kind.FIELD, name, declaringClass, fieldType);
+        }
+
+        /**
+         * Returns a {@linkplain VarHandleDesc} corresponding to a {@link VarHandle}
+         * for a static field.
+         *
+         * @param name the unqualified name of the field
+         * @param declaringClass a {@link ClassDesc} describing the declaring class,
+         *                       for field var handles
+         * @param fieldType a {@link ClassDesc} describing the type of the field
+         * @return the {@linkplain VarHandleDesc}
+         * @throws NullPointerException if any of the arguments are null
+         * @jvms 4.2.2 Unqualified Names
+         */
+        public static VarHandleDesc ofStaticField(ClassDesc declaringClass, String name, ClassDesc fieldType) {
+            Objects.requireNonNull(declaringClass);
+            Objects.requireNonNull(name);
+            Objects.requireNonNull(fieldType);
+            return new VarHandleDesc(Kind.STATIC_FIELD, name, declaringClass, fieldType);
+        }
+
+        /**
+         * Returns a {@linkplain VarHandleDesc} corresponding to a {@link VarHandle}
+         * for an array type.
+         *
+         * @param arrayClass a {@link ClassDesc} describing the type of the array
+         * @return the {@linkplain VarHandleDesc}
+         * @throws NullPointerException if any of the arguments are null
+         */
+        public static VarHandleDesc ofArray(ClassDesc arrayClass) {
+            Objects.requireNonNull(arrayClass);
+            if (!arrayClass.isArray())
+                throw new IllegalArgumentException("Array class argument not an array: " + arrayClass);
+            return new VarHandleDesc(Kind.ARRAY, ConstantDescs.DEFAULT_NAME, arrayClass, arrayClass.componentType());
+        }
+
+        /**
+         * Returns a {@link ClassDesc} describing the type of the variable described
+         * by this descriptor.
+         *
+         * @return the variable type
+         */
+        public ClassDesc varType() {
+            return varType;
+        }
+
+        @Override
+        public VarHandle resolveConstantDesc(MethodHandles.Lookup lookup)
+                throws ReflectiveOperationException {
+            return switch (kind) {
+                case FIELD        -> lookup.findVarHandle((Class<?>) declaringClass.resolveConstantDesc(lookup),
+                        constantName(),
+                        (Class<?>) varType.resolveConstantDesc(lookup));
+                case STATIC_FIELD -> lookup.findStaticVarHandle((Class<?>) declaringClass.resolveConstantDesc(lookup),
+                        constantName(),
+                        (Class<?>) varType.resolveConstantDesc(lookup));
+                case ARRAY        -> MethodHandles.arrayElementVarHandle((Class<?>) declaringClass.resolveConstantDesc(lookup));
+                default -> throw new InternalError("Cannot reach here");
+            };
+        }
+
+        /**
+         * Returns a compact textual description of this constant description.
+         * For a field {@linkplain VarHandle}, includes the owner, name, and type
+         * of the field, and whether it is static; for an array {@linkplain VarHandle},
+         * the name of the component type.
+         *
+         * @return A compact textual description of this descriptor
+         */
+        @Override
+        public String toString() {
+            return switch (kind) {
+                case FIELD, STATIC_FIELD -> String.format("VarHandleDesc[%s%s.%s:%s]",
+                        (kind == Kind.STATIC_FIELD) ? "static " : "",
+                        declaringClass.displayName(), constantName(), varType.displayName());
+                case ARRAY               -> String.format("VarHandleDesc[%s[]]", declaringClass.displayName());
+                default -> throw new InternalError("Cannot reach here");
+            };
+        }
+    }
+    // END Android-added: Add VarHandleDesc from OpenJDK 17. http://b/270028670
 }
